Bug 298372 - Remembering Login Details on build.opensuse.org does not work
Summary: Remembering Login Details on build.opensuse.org does not work
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-18 18:39 UTC by Christian Trippe
Modified: 2012-06-09 05:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Trippe 2012-04-18 18:39:19 UTC
When using konqueror with webkit, remembering Login details on build.opensuse.org does not work. 
It works fine when using khtml.

On other pages (bugzilla.novell.com, gmx.de) it also works with konqueror and webkit.

Using KDE 4.8.2

Reproducible: Always

Steps to Reproduce:
1. Use konqueror with webkit and login on build.opensuse.org
2. Choose to save your login credentials (using kwallet)
3. Logout and try to login again
Actual Results:  
The Login form is not filled

Expected Results:  
The Login form should be filled (as it is the case when you change to khtml).
Comment 1 Stanislav Sidorenko 2012-05-26 11:08:27 UTC
I have this issue on many other sites. Neither rekonq nor konqueror+webkit can get password from kwallet but both can save entered password.
Comment 2 Stanislav Sidorenko 2012-05-27 15:25:03 UTC
I've tried build kdelibs 4.8.3 with reverted commit from bug 256029 and got it working both in rekonq and in konqueror. Login form is filled correctly on build.opensuse.org and on other sites where it is broken in normal 4.8.3. 

Looks like that commit has fixed some case but has broken other cases.
Comment 3 Dawit Alemayehu 2012-05-30 06:32:28 UTC
Git commit d840084903f80b102e15d9e9ae57779d49e07d3b by Dawit Alemayehu.
Committed on 30/05/2012 at 08:25.
Pushed by adawit into branch 'KDE/4.8'.

- Fixed the issue of login @ some websites not being filled in at all.
- Greatly improved the javascript code used to parse HTML forms.
FIXED-IN: 4.8.4

M  +22   -33   kdewebkit/kwebwallet.cpp

http://commits.kde.org/kdelibs/d840084903f80b102e15d9e9ae57779d49e07d3b
Comment 4 Stanislav Sidorenko 2012-05-30 07:39:39 UTC
Hmm. That's really funny. Looks like this fix breaks login form filling on https://bugs.kde.org/
Comment 5 Stanislav Sidorenko 2012-05-30 09:15:57 UTC
Dawit,
Could you please check your fix at https://bugs.kde.org/ ? 
Form filling is broken for me on this site with your fix.
Comment 6 Dawit Alemayehu 2012-06-09 05:57:58 UTC
(In reply to comment #5)
> Dawit,
> Could you please check your fix at https://bugs.kde.org/ ? 
> Form filling is broken for me on this site with your fix.

This should be fixed now (4.8.4) and will work even better (read: more efficiently) in KDE 4.9.