- Fixed the issue of login @ some websites not being filled in at all. - Greatly improved the javascript code used to parse HTML forms.

BUG: 298372
FIXED-IN: 4.8.4